# circuitweaver

./: .gitignore  LICENSE  PLAN.md  README.md  package.json  pyproject.toml  run_compile.py  test_sym-erc.rpt
.github/workflows/: ci.yml  release.yml
docker/: Dockerfile  Dockerfile.slim  docker-compose.yml
docs/: circuit-json-spec.md  kiss-connectivity-refactor-plan.md  mcp-workflow.md  troubleshooting.md
docs/requirements/: README.md  cli-and-mcp.md  data-model.md  implementation-notes-and-gaps.md  io-and-validation.md  kicad-library-and-erc.md  layout-and-compilation.md  layout-bounds.md  layout-quality.md  runtime-and-packaging.md  target-architecture.md
examples/motor_inverter_stm32/: README.md  circuit.json
examples/simple_led/: README.md  circuit.json
src/circuitweaver/: __init__.py  __main__.py  cli.py  doctor.py  project.py  requirements.py  results.py
src/circuitweaver/compiler/: __init__.py  auto_router.py  autolayout.py  compiler.py  connectivity.py  elk_runner.py  engine.py  global_nets.py  kicad_writer.py  layout_helper.js  layout_quality.py
src/circuitweaver/compiler/layout/: __init__.py  builder.py  engine.py  models.py  parser.py  registry.py
src/circuitweaver/compiler/layout/plugins/: attachment.py  base.py  elk_layered.py
src/circuitweaver/erc/: __init__.py  checker.py  runner.py
src/circuitweaver/io/: __init__.py  json.py  s_expr.py
src/circuitweaver/server/: __init__.py  http_transport.py  mcp_server.py  tool_registry.py
src/circuitweaver/transform/: __init__.py  layout_to_schematic.py  schematic_to_s_expr.py  source_to_layout.py
src/circuitweaver/types/: __init__.py  circuit_json.py  connectivity.py  errors.py  layout.py  s_expr.py  schematic.py  source.py
src/circuitweaver/utils/: __init__.py  geometry.py  grid.py
src/circuitweaver/validator/: __init__.py  engine.py  result.py
src/circuitweaver/validator/rules/: __init__.py  base.py  bounds_check.py  dangling_labels.py  hierarchy_links.py  integer_coords.py  orthogonal_traces.py  pin_positions.py  source_first.py  source_port_completeness.py  source_refs.py  trace_connections.py  unconnected_pins.py  unique_ids.py  unplaced_components.py
tests/: __init__.py  conftest.py  test_cli_and_mcp_requirements.py  test_layout_and_compilation_requirements.py  test_layout_quality_requirements.py  test_target_architecture_requirements.py
tests/fixtures/valid/: simple_led.json
tests/system/: __init__.py  test_source_to_layout.py
tests/unit/: test_autolayout_ipc.py  test_autolayout_logic.py  test_compiler_hierarchy_mapping.py  test_connectivity.py  test_io.py  test_kicad_writer.py  test_layout_quality.py  test_library_search.py  test_logic.py  test_pinout.py  test_server_tools.py  test_source_port_completeness.py  test_target_architecture.py  test_transform.py  test_validator.py
tmp_clean/: ~debug.kicad_pro.lck
